--- a/styles/partials/_reset.scss
+++ b/styles/partials/_reset.scss
@@ -2,4 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: $fontDancingscript;
+
+
+    &::selection {
+        background-color: black;
+        color: rgba(16, 10, 2, 0.881);
+    }
 }
